recipe_book_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: recipe-book-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - mercmeals.com
    - www.mercmeals.com
    - api.mercmeals.com
    secretName: recipe-book-tls
  rules:
    - host: mercmeals.com
      http:
        paths:
          - backend:
              serviceName: recipe-book-client
              servicePort: 80
    - host: www.mercmeals.com # TODO: can this by DRYed up?
      http:
        paths:
          - backend:
              serviceName: recipe-book-client
              servicePort: 80
    - host: api.mercmeals.com
      http:
        paths:
          - backend:
              serviceName: recipe-book-api
              servicePort: 80
